[gd_scene load_steps=10 format=3 uid="uid://buffpihiyfdfp"]

[ext_resource type="Script" path="res://script/menu/start_menu.gd" id="1_8yjky"]
[ext_resource type="SpriteFrames" uid="uid://crd2oe34fw25n" path="res://asset/bg/Kelvin_Start.gif" id="2_l7gvy"]
[ext_resource type="Theme" uid="uid://crcl4jjlnol8p" path="res://asset/theme/title.tres" id="3_c8txx"]
[ext_resource type="Theme" uid="uid://c2seof1xs0sks" path="res://asset/theme/main.tres" id="4_n3hu0"]
[ext_resource type="AudioStream" uid="uid://cff1kdwm0nunp" path="res://asset/resource/audio/sound/Modern6.mp3" id="5_cnxft"]
[ext_resource type="AudioStream" uid="uid://ck31balxavj3t" path="res://asset/resource/audio/sound/Modern13.mp3" id="6_17yyu"]

[sub_resource type="Animation" id="Animation_xi3rk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(904, 0)]
}

[sub_resource type="Animation" id="Animation_le4mk"]
resource_name = "title"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 0.933333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0174533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.633333, 1.53333, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(904, 0), Vector2(895, -3), Vector2(900, 4), Vector2(904, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cefs5"]
_data = {
"RESET": SubResource("Animation_xi3rk"),
"title": SubResource("Animation_le4mk")
}

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8yjky")

[node name="bg" type="AnimatedSprite2D" parent="."]
texture_filter = 4
scale = Vector2(4.84074, 4.84074)
sprite_frames = ExtResource("2_l7gvy")
animation = &"gif"
autoplay = "gif"
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.936
anchor_top = 0.035
anchor_right = 0.959
anchor_bottom = 0.18
offset_left = -965.0
offset_bottom = 267.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2

[node name="startButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_n3hu0")
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="quitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_n3hu0")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cefs5")
}
autoplay = "title"
speed_scale = 0.25

[node name="title" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(1400, 0)
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1400.0
offset_bottom = 300.0
grow_horizontal = 0
pivot_offset = Vector2(592, 121)
theme = ExtResource("3_c8txx")
text = "Kelvin's Katch"
vertical_alignment = 2

[node name="buttonSound1" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_17yyu")
bus = &"soundEffect"

[node name="buttonSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_cnxft")
bus = &"soundEffect"

[connection signal="button_down" from="VBoxContainer/startButton" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/startButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_start_button_pressed"]
[connection signal="button_down" from="VBoxContainer/quitButton" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/quitButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_quit_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
